# bluffhouse

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  index.html  pyproject.toml  render.yaml
.github/workflows/: pages.yml
demos/: mode2-table-talk.html  mode4-codebook-drama.html  mode6-full-manipulation.html  presentation.html
docs/: demo-script.md  phase-8.md
src/bluffhouse/: __init__.py  demo.py
src/bluffhouse/agents/: __init__.py  base.py  llm.py  scripted.py
src/bluffhouse/benchmark/: __init__.py  judge.py  runner.py  scoring.py
src/bluffhouse/engine/: __init__.py  deck.py  table.py
src/bluffhouse/harness/: __init__.py  cli.py  game.py  live.py  log.py  projection.py  serve.py
src/bluffhouse/llm/: __init__.py  anthropic_client.py  base.py  mock.py  openai_compat.py
src/bluffhouse/models/: __init__.py  actions.py  config.py  events.py  observations.py  views.py
src/bluffhouse/perception/: __init__.py  resolver.py
src/bluffhouse/viewer/: __init__.py  template.html
src/bluffhouse/webapp/: __init__.py
tests/: test_attention.py  test_benchmark.py  test_comms.py  test_determinism.py  test_engine.py  test_harness.py  test_llm_agent.py  test_llm_clients.py  test_manipulation.py  test_perception.py  test_product.py  test_viewer.py
web/: index.html  package-lock.json  package.json  template.html  vite.config.ts  vite.single.config.ts
web/src/: AppShell.css  AppShell.tsx  main.tsx  replay-main.tsx  types.ts
web/src/hub/: HubPage.css  HubPage.tsx
web/src/leaderboard/: Leaderboard.css  LeaderboardPage.tsx
web/src/lib/: data.ts  (+5 more)
(+27 files in other folders)
