[project]
name = "bluffhouse"
version = "0.1.0"
description = "A seeded, symbolic, multi-agent poker harness for measuring social manipulation under uncertainty"
readme = "README.md"
authors = [
    { name = "Hemesh Chadalavada", email = "55226601+hemeshch@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.115",
    "openai>=2.44.0",
    "pokerkit>=0.7.4",
    "pydantic>=2.13.4",
    "uvicorn>=0.30",
]

[project.scripts]
bluffhouse = "bluffhouse.harness.cli:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=9.1.1",
]
